update: add missing properties and add well feature data values to the response